writerfilter/qa/cppunittests/rtftok/rtfdispatchsymbol.cxx
@@ -7,22 +7,23 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 
-#include <test/unoapi_test.hxx>
+#include <test/unoapixml_test.hxx>
 
 #include <com/sun/star/text/XTextDocument.hpp>
 #include <com/sun/star/beans/XPropertySet.hpp>
 #include <com/sun/star/style/ParagraphAdjust.hpp>
+#include <com/sun/star/qa/XDumper.hpp>
 
 using namespace ::com::sun::star;
 
 namespace
 {
 /// Tests for writerfilter/source/rtftok/rtfdispatchsymbol.cxx.
-class Test : public UnoApiTest
+class Test : public UnoApiXmlTest
 {
 public:
     Test()
-        : UnoApiTest("/writerfilter/qa/cppunittests/rtftok/data/")
+        : UnoApiXmlTest("/writerfilter/qa/cppunittests/rtftok/data/")
     {
     }
 };
@@ -63,6 +64,25 @@ CPPUNIT_TEST_FIXTURE(Test, testCenterAfterPage)
     // - Actual  : 0 (LEFT)
     // i.e. the paragraph alignment on the second page was lost.
     CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int16>(style::ParagraphAdjust_CENTER), eActual);
+}
+
+CPPUNIT_TEST_FIXTURE(Test, testFloattableThenSectBreak)
+{
+    // Given a document with a floating table, immediately followed by \sect:
+    // When loading that file:
+    loadFromFile(u"floattable-then-sect-break.rtf");
+
+    // Then make sure that the floating table is on the first page:
+    uno::Reference<frame::XModel> xModel(mxComponent, uno::UNO_QUERY);
+    css::uno::Reference<qa::XDumper> xDumper(xModel->getCurrentController(), uno::UNO_QUERY);
+    OString aDump = xDumper->dump("layout").toUtf8();
+    auto pCharBuffer = reinterpret_cast<const xmlChar*>(aDump.getStr());
+    xmlDocUniquePtr pXmlDoc(xmlParseDoc(pCharBuffer));
+    // Without the accompanying fix in place, this test would have failed with:
+    // - Expected: 1
+    // - Actual  : 0
+    // i.e. the floating table was on the 2nd page, not on the 1st page.
+    assertXPath(pXmlDoc, "/root/page[1]/sorted_objs/fly"_ostr, 1);
 }
 }
 
